# mcsak

./: .gitignore  Makefile.am  README.md  README.txt  autogen.sh  configure.ac  example.ini
facsimile/: GMakefile  mcsak.spec.in
src/: mcsak.c
